--- a/_sass/modules/_technical-section.scss
+++ b/_sass/modules/_technical-section.scss
@@ -706,8 +706,8 @@
   }
 
   .technical-card--weather .technical-card-img {
-    max-width: 140px;
-    max-height: 105px;
+    max-width: 110px;
+    max-height: 85px;
   }
 
   .technical-card--back {
